app/assets/stylesheets/disco_app/disco/_cards.scss
//
// Replicate the styles for Shopify Admin cards.
// --------------------------------------------------

.next-card {
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
}

.next-card ~ .next-card {
  margin-top: 20px;
}

.next-card__header {
  padding: 20px 20px 0;

  h1, h2, h3 {
    margin-bottom: 0;
    font-size: 18px;
    line-height: 1.2em;
  }
}

.next-card__footer {
  padding: 0 20px 20px;
}

.next-card__section {
  padding: 20px;
}

.next-card__section ~ .next-card__section {
  border-top: 1px solid #ebeef0;
}

.next-card__section--no-bottom-padding {
  padding-bottom: 0;
}

.next-card--aside,
.next-card--disabled {
  background-color: #f5f6f7;
}

.next-card--disabled {
  .next-card__header,
  .next-card__section {
    color: #777777;
  }
}

